--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,44 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles/index.css" />
     <title>Festivite</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@400..800&family=Leckerli+One&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
       rel="stylesheet"
     />
   </head>
-  <body></body>
+  <body>
+    <div id="app">
+      <aside>
+        <div class="aside-container">
+          <header>
+            <img src="assets/logo.svg" alt="" />
+            <h1>Festivite</h1>
+            <p>Crie um convite digital para o seu evento</p>
+          </header>
+          <img src="assets/Background.png" alt="">
+        </div>
+      </aside>
+      <main>
+        <div class="main-container">
+          <h2>Crie seu convite</h2>
+          <form method="post">
+            <fieldset>
+              <legend>Sobre o evento</legend>
+              <div class="input-wrapper">
+                <label for="title">Título</label>
+                <input
+                  id="title"
+                  name="title"
+                  type="text"
+                  placeholder="Nome do evento"
+                />
+              </div>
+            </fieldset>
+          </form>
+        </div>
+      </main>
+    </div>
+  </body>
 </html>
